Upgraded gradle version